# re-wear

./: .gitignore  API.md  LICENSE  README.md
backend/: .dockerignore  .env.example  COMPLETE_FLOW_EXPLANATION.md  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  start.sh  test_api.py  test_comprehensive_swaps.py  test_docker_image_upload.py  test_docker_redemption.py  test_error_responses.py
backend/admin_panel/: apps.py  urls.py  views.py
backend/items/: admin.py  models.py  serializers.py  urls.py  views.py
backend/items/management/commands/: create_sample_items.py
backend/items/migrations/: 0001_initial.py  0002_itemlike_alter_item_options_alter_itemimage_options_and_more.py  0003_item_is_flagged_alter_item_is_approved.py  0004_item_approved_at_item_approved_by_item_featured_at_and_more.py  0005_platformconfig.py  0006_itemreport.py
backend/rewear/: asgi.py  settings.py  urls.py  wsgi.py
backend/swaps/: admin.py  models.py  serializers.py  urls.py  views.py
backend/swaps/migrations/: 0001_initial.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_alter_user_email.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/browse/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/lib/: api-new.ts  api.ts  api.ts.backup  utils.ts
(+7 files in other folders)
