[project]
name = "rewear-backend"
version = "0.1.0"
description = "backend for the rewear app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django==5.2.4",
    "djangorestframework==3.16.0",
    "django-cors-headers==4.7.0",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "pillow==11.3.0",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "uvloop==0.21.0",
    "httptools==0.6.4",
    "anyio==4.9.0",
    "click==8.2.1",
    "h11==0.16.0",
    "websockets==15.0.1",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.1",
    "pyyaml==6.0.2",
    "django-unfold==0.62.0",
    "whitenoise>=6.9.0",
    "djoser>=2.3.1",
    "djangorestframework-simplejwt>=5.5.0",
    "asgiref>=3.9.1",
    "cryptography>=45.0.5",
    "oauthlib>=3.3.1",
    "python3-openid>=3.2.0",
    "requests>=2.32.4",
    "requests-oauthlib>=2.0.0",
    "social-auth-app-django>=5.5.1",
    "social-auth-core>=4.7.0",
    "drf-yasg>=1.21.10",
]

